// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> should render as input 1`] = `
<div>
  <div
    class="flex flex-col gap-1 text-gray-400"
  >
    <div
      class="border border-zinc-200 rounded bg-transparent"
    >
      <input
        class="bg-transparent p-2 w-full"
        type="input"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<Input> should render as textarea 1`] = `
<div>
  <div
    class="flex flex-col gap-1 text-gray-400"
  >
    <div
      class="border border-zinc-200 rounded bg-transparent"
    >
      <textarea
        class="bg-transparent p-2 w-full"
        type="textarea"
      />
    </div>
  </div>
</div>
`;
